turtleart.lessons.turtleart.Main.Square.scala.error
Source:5: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
	droite();
              ^Source:7: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
	droite();
              ^Source:9: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
	droite();
              ^