turtleart.lessons.turtleart.Main.Square.scala.code
override def run() {
	baisseCrayon();
	avance(200);
	droite();
	avance(200);
	droite();
	avance(200);
	droite();
	avance(200);
}
